--- a/AdamIoC.Console/AdamIoC.Console.csproj
+++ b/AdamIoC.Console/AdamIoC.Console.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C0F3ACDB-F1C7-4538-9236-67C2A2F811BE}</ProjectGuid>
+    <ProjectGuid>{B3FC7877-79A2-4990-BF85-9F37C2B31CE9}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>AdamIoC</RootNamespace>
-    <AssemblyName>AdamIoC</AssemblyName>
+    <RootNamespace>AdamIoC.Console</RootNamespace>
+    <AssemblyName>AdamIoC.Console</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,11 +42,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Implementations\Car.cs" />
+    <Compile Include="Interfaces\IVehicle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VehicleType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AdamIoC\AdamIoC.csproj">
+      <Project>{c6dd9454-9fcd-401c-8a35-14aadd3f4eda}</Project>
+      <Name>AdamIoC</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
