Made new generic exception Moved the models into their own project Removed console project Created xUnit test project

--- a/AdamIoC/AdamIoC.csproj
+++ b/AdamIoC/AdamIoC.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InformativeException.cs" />
     <Compile Include="InstanceManagement\IInstanceManager.cs" />
     <Compile Include="InversionOfControlContainer.cs" />
     <Compile Include="InstanceManagement\InstanceManagerFactory.cs" />
