--- a/Requirements.txt
+++ b/Requirements.txt
@@ -16,7 +16,7 @@ DONE			5   You must be able to resolve registered types through the container
 DONE			6   If you try to resolve a type that the container is unaware of it should throw 
 					an informative exception
             
-				7   When resolving from the container for a registered type, if that type has constructor
+NOT STARTED		7   When resolving from the container for a registered type, if that type has constructor
 					arguments which are also registered types the container should inject the instances 
 					into the constructor appropriately (this is where dependency injection applies).
 					a   Example Constructor: public UsersController(ICalculator calculator,  IEmailService emailService). 
