--- a/AdamIoC.Tests/AdamIoC.Tests.csproj
+++ b/AdamIoC.Tests/AdamIoC.Tests.csproj
@@ -60,8 +60,14 @@
     <Compile Include="Enums\GenderType.cs" />
     <Compile Include="Enums\VehicleType.cs" />
     <Compile Include="Implementations\Car.cs" />
+    <Compile Include="Implementations\Company.cs" />
+    <Compile Include="Implementations\ContactInformation.cs" />
+    <Compile Include="Implementations\Location.cs" />
     <Compile Include="Implementations\Man.cs" />
+    <Compile Include="Interfaces\IContactInformation.cs" />
     <Compile Include="Interfaces\IHuman.cs" />
+    <Compile Include="Interfaces\ICompany.cs" />
+    <Compile Include="Interfaces\ILocation.cs" />
     <Compile Include="Interfaces\IVehicle.cs" />
     <Compile Include="InversionOfControlContainerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
