--- a/Requirements.txt
+++ b/Requirements.txt
@@ -16,13 +16,13 @@ DONE			5   You must be able to resolve registered types through the container
 DONE			6   If you try to resolve a type that the container is unaware of it should throw 
 					an informative exception
             
-IN PROGRESS		7   When resolving from the container for a registered type, if that type has constructor
+DONE			7   When resolving from the container for a registered type, if that type has constructor
 					arguments which are also registered types the container should inject the instances 
 					into the constructor appropriately (this is where dependency injection applies).
 					a   Example Constructor: public UsersController(ICalculator calculator,  IEmailService emailService). 
 						If all 3 types for the controller, calculator, and email service are registered you should be able to resolve an instance of the UsersController.
             
-IN PROGRESS		8   You must write tests for all of this behavior using xUnit.
+DON				8   You must write tests for all of this behavior using xUnit.
             
 DONE			9   You must use git for source control and push your code to github.com. Please send me the link 
 					to your repository at least 1 day before the second interview.
