Renamed the exception type. Renamed the LifecycleType enum

--- a/AdamIoC/AdamIoC.csproj
+++ b/AdamIoC/AdamIoC.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InformativeException.cs" />
+    <Compile Include="NotRegisteredException.cs" />
     <Compile Include="InstanceManagement\IInstanceCreator.cs" />
     <Compile Include="InstanceManagement\InstanceCreatorFactory.cs" />
     <Compile Include="LifecycleInstanceManagement\ILifecycleInstanceManager.cs" />
@@ -48,7 +48,7 @@
     <Compile Include="InstanceManagement\InstanceCreator.cs" />
     <Compile Include="LifecycleInstanceManagement\LifecycleInstanceManagerFactory.cs" />
     <Compile Include="LifecycleInstanceManagement\LifecycleInstanceManager.cs" />
-    <Compile Include="ObjectLifeCycleType.cs" />
+    <Compile Include="LifecycleType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistrationInfoModel.cs" />
     <Compile Include="LifecycleInstanceManagement\SingletonLifecycleInstanceManager.cs" />
