--- a/AdamIoC/AdamIoC.csproj
+++ b/AdamIoC/AdamIoC.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions.cs" />
     <Compile Include="NotRegisteredException.cs" />
     <Compile Include="InstanceManagement\IInstanceCreator.cs" />
     <Compile Include="InstanceManagement\InstanceCreatorFactory.cs" />
